--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>ml blog</title>
 </head>
 <body>
+    <script src="script.js"></script>
     <h1>Hello World!</h1>
 </body>
 </html>
